fix(sticker): 스티커 아이콘의 z-index 삭제 & 스티커 입력시 블링크 현상 수정
스티커를 message로서 입력을 완료 하였을때 원본 이미지를 처음으로 사용하게 되어 블링크가 발생하게 되므로
스티커 선택시 요청하는 uri과 message로서 입력을 완료하였을때 사용하는 uri를 동일하게 하여 발생하는 블링크를 줄인다.

JND-4226
JND-4072

--- a/client/app/sticker/sticker.css
+++ b/client/app/sticker/sticker.css
@@ -23,7 +23,6 @@
   right: 10px;
   bottom: 8px;
   width:16px;
-  z-index: 1000;
 }
 .sticker_panel_wrap.shift{
   right: 20px;
@@ -48,7 +47,7 @@
   position: absolute;
   top: .63em;
   left: 5px;
-  height: 1.5px;
+  height: .1em;
   width: .47em;
   background-color: #fff;
   display: inline-block;
@@ -71,10 +70,12 @@
   top: .57em;
   left: 4px;
   width: .58em;
-  height: 4px;
+  height: .23em;
   background-color: #fff;
   display: inline-block;
   border-top: 1px solid rgba(0, 0, 0, .8);
+ border-bottom-right-radius: 12px 8px;
+ border-bottom-left-radius: 12px 8px;
 }
 .sticker_panel_wrap .sticker_panel_btn.on > .lip {
   border-color: #00abe6;
@@ -202,8 +203,8 @@ img.sticker {
 }
 
 img.sticker.size_5 {
-  width: 145px;
-  height: 145px;
+  width: 130px;
+  height: 130px;
 }
 img.sticker.size_1 {
   width: 65px;
